--- a/src/main/webapp/login.css
+++ b/src/main/webapp/login.css
@@ -102,7 +102,7 @@ input[type="text"]:hover, input[type="password"]:hover{
 	color:#000000;
 	
 }
-.submit h4 a{
+.button h4 a{
 	float:left;
 	font-size: 16px;
 	color: #999;
@@ -111,14 +111,14 @@ input[type="text"]:hover, input[type="password"]:hover{
 	margin-top: 15px;
 	margin-left: 21px;
 }
-.submit h4 a:hover{
+.button h4 a:hover{
 	color:#000000;
 }
 /*************************/
-.submit{
+.button{
 	padding-top:3em;
 }
-input[type="submit"] {
+input[type="button"] {
 	float: left;
 	color: #fff;
 	cursor: pointer;
@@ -135,7 +135,7 @@ input[type="submit"] {
 	-moz-border-radius:0.5em;
 	-o-border-radius:0.5em;
 }
-input[type="submit"]:hover {
+input[type="button"]:hover {
 	background: #fff;
 	color:#1E90FF;
 	border:2px solid #1E90FF;
@@ -287,20 +287,20 @@ input[type="submit"]:hover {
 	form {
 	padding: 1.5em 1.5em;
 	}
-	.submit {
+	.button {
 	padding-top: 0.4em;
 	}
-	input[type="submit"] {
+	input[type="button"] {
 		float:none;
 	padding: 11px 0px;
 	width: 52%;
 	font-size: 15px;
 	}
-	.submit h4 {
+	.button h4 {
 		margin-top: 15px;
 		margin-bottom: 20px;
 	}
-	.submit h4 a {
+	.button h4 a {
 	float: none;
 	font-size: 15px;
 	}
