--- a/src/main/webapp/register.css
+++ b/src/main/webapp/register.css
@@ -114,11 +114,11 @@ input[type="text"]:hover, input[type="password"]:hover{
 }
 
 /*************************/
-.submit{
+.button{
 	padding-bottom:1em;
 	padding-top:3em
 }
-input[type="submit"] {
+input[type="button"] {
 	float: left;
 	color: #fff;
 	cursor: pointer;
@@ -135,7 +135,7 @@ input[type="submit"] {
 	-moz-border-radius:0.5em;
 	-o-border-radius:0.5em;
 }
-input[type="submit"]:hover {
+input[type="button"]:hover {
 	background: #fff;
 	color:#1E90FF;
 	border:2px solid #1E90FF;
@@ -158,7 +158,7 @@ input[type="reset"] {
 	-moz-border-radius:0.5em;
 	-o-border-radius:0.5em;
 }
-input[type="submit"]:hover {
+input[type="button"]:hover {
 	background: #fff;
 	color:#1E90FF;
 	border:2px solid #1E90FF;
@@ -310,20 +310,20 @@ input[type="submit"]:hover {
 	form {
 	padding: 1.5em 1.5em;
 	}
-	.submit {
+	.button {
 	padding-top: 0.4em;
 	}
-	input[type="submit"] {
+	input[type="button"] {
 		float:none;
 	padding: 11px 0px;
 	width: 52%;
 	font-size: 15px;
 	}
-	.submit h4 {
+	.button h4 {
 		margin-top: 15px;
 		margin-bottom: 20px;
 	}
-	.submit h4 a {
+	.button h4 a {
 	float: none;
 	font-size: 15px;
 	}
